--- a/Code/about.html
+++ b/Code/about.html
@@ -126,6 +126,39 @@
                     </div>
                 </div>
             </div>
+            <footer class="footer">
+                <div class="container">
+                    <div class="footer-nav">
+                        <div class="row">
+                            <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                                <a href="index.html"><img src="assets/img/Logo.png" alt=""></a>
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                                <h3 class="nav-color">Thông tin AI team</h3>
+                                <a>Về AI team</a><br>
+                                <a>Dịch vụ</a><br>
+                                <a>Liên hệ</a><br>
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                                <h3 class="nav-color">Cộng đồng</h3>
+                                <a>Hỏi đáp</a><br>
+                                <a>Tài liệu</a><br>
+                                <a>Chiến dịch</a><br>
+                                <a>Tài trợ</a><br>
+                                <a>Người ủng hộ</a>
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+                                <h3 class="nav-color">Kết nối với AI team</h3>
+                                <a>Kết nối với AI team qua mạng xã hội</a>
+                                <div class="footer-contact">
+                                    <div class="ti-facebook"></div>
+                                    <div class="ti-github"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
     </main>
 
@@ -141,5 +174,6 @@
     <!-- Jquery Plugins, main Jquery -->
     <script src="./assets/javascript/main.js"></script>
 </body>
+
 
 </html>
