Trinh add signin and signup pages

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                                         <li> <a href="index.html"> Trang Chủ</a> </li>
                                         <li> <a href="index.html"> Giới Thiệu</a> </li>
                                         <li> <a href="index.html"> Khóa Học</a> </li>
-                                        <li class="has-dropdown"> <a href="index.html"> Liên Hệ</a>
+                                        <li class="has-dropdown"> <a href="contact.html"> Liên Hệ</a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">Địa Chỉ</a></li>
                                                 <li><a href="blog_details.html">Hòm Thư</a></li>
@@ -47,7 +47,7 @@
                                             </ul>
                                         </li>
                                         <li> <a href="index.html"> Chia Sẻ</a> </li>
-                                        <li><a class="login"><i class="ti-user"></i> Đăng Nhập </a></li>
+                                        <li><a href="signin.html" class="login"><i class="ti-user"></i> Đăng Nhập </a></li>
                                     </ul>
                                 </nav>
                             </div>
