--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                             </ul>
                                         </li>
                                         <li> <a href="index.html"> Chia Sẻ</a> </li>
-                                        <li><a class="login"><i class="ti-user"></i> Đăng Nhập </a></li>
+                                        <li><a href="signin.html" class="login"><i class="ti-user"></i> Đăng Nhập </a></li>
                                     </ul>
                                 </nav>
                             </div>
